// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`groups-side-bar Renders \`groups-side-bar\` with closed navigation 1`] = `
<div>
  <aside
    class="side-bar secondary v-navigation-drawer v-navigation-drawer--close v-navigation-drawer--fixed v-navigation-drawer--is-mobile theme--light"
    style="height: 100%; margin-top: 0px; transform: translateX(-250px); width: 250px;"
  >
    <div
      class="brand ma-0 secondary lighten-1"
    >
      <app-logo-stub
        class="logo"
      />
      <logged-users-count-stub
        badgecolor="primary"
      />
      <app-version-stub
        class="version"
      />
    </div>
    <!---->
    <hr
      class="v-divider theme--light"
    />
    <transition-stub
      name="fade-transition"
    >
      <div
        class="v-overlay v-overlay--active"
        style="display: none;"
      >
        <button
          class="primary v-btn theme--light"
          type="button"
        >
          <div
            class="v-btn__content"
          >
            Submit
          </div>
        </button>
        <button
          class="v-btn theme--light"
          type="button"
        >
          <div
            class="v-btn__content"
          >
            Cancel
          </div>
        </button>
      </div>
    </transition-stub>
    <groups-side-bar-playlists-stub />
    <groups-settings-button-stub
      buttonprops="[object Object]"
      tooltipright="true"
      wrapperprops="[object Object]"
    />
    <div
      class="v-navigation-drawer__border"
    />
  </aside>
  <transition-stub
    name="fade-transition"
  >
    <div
      class="v-overlay v-overlay--active content-overlay"
      style="display: none;"
    />
  </transition-stub>
</div>
`;

exports[`groups-side-bar Renders \`groups-side-bar\` with opened navigation 1`] = `
<div>
  <aside
    class="side-bar secondary v-navigation-drawer v-navigation-drawer--fixed v-navigation-drawer--is-mobile v-navigation-drawer--open theme--light"
    style="height: 100%; margin-top: 0px; transform: translateX(0px); width: 250px;"
  >
    <div
      class="brand ma-0 secondary lighten-1"
    >
      <app-logo-stub
        class="logo"
      />
      <logged-users-count-stub
        badgecolor="primary"
      />
      <app-version-stub
        class="version"
      />
    </div>
    <!---->
    <hr
      class="v-divider theme--light"
    />
    <transition-stub
      name="fade-transition"
    >
      <div
        class="v-overlay v-overlay--active"
        style="display: none;"
      >
        <button
          class="primary v-btn theme--light"
          type="button"
        >
          <div
            class="v-btn__content"
          >
            Submit
          </div>
        </button>
        <button
          class="v-btn theme--light"
          type="button"
        >
          <div
            class="v-btn__content"
          >
            Cancel
          </div>
        </button>
      </div>
    </transition-stub>
    <groups-side-bar-playlists-stub />
    <groups-settings-button-stub
      buttonprops="[object Object]"
      tooltipright="true"
      wrapperprops="[object Object]"
    />
    <div
      class="v-navigation-drawer__border"
    />
  </aside>
  <transition-stub
    name="fade-transition"
  >
    <div
      class="v-overlay v-overlay--active content-overlay"
      style="display: none;"
    />
  </transition-stub>
</div>
`;
